--- a/index.css
+++ b/index.css
@@ -28,10 +28,9 @@
 /* box1 */
 
 .logo{
-    background-image: url("amazon-logo.png");
-    background-size: cover;
-    height: 100%;
-    width:100%;
+    background-image: url("amazon_logo.png");
+    background-size:cover;
+    height: 64px;
 }
 
 /* .logo img{
@@ -41,7 +40,7 @@
 } */
 
 .navlogo{
-    height: 56px;
+    height: 64px;
     width: 150px;
 }
 
@@ -77,12 +76,17 @@
 
 .navsearch{
     display: flex;
-    height:60px;
+    height:40px;
     width:700px;
+    border:2px solid transparent;
     align-items: center; /*to vertically align*/
-    justify-content:center; /*horizontally align*/
+    justify-content:space-evenly; /*horizontally align*/
     border-radius: 4px;  /* to curve the border */
     /* background-color: blanchedalmond; */
+}
+
+.navsearch:hover{
+    border: 2px solid orange;
 }
 
 .search-select{
@@ -99,10 +103,11 @@
 
 .search-input{
     height: 38px;
-    width: 600px;
+    width: 100%;
     border:none;
     font-weight: bold;
-    font-size: 16px;    
+    font-size: 16px;  
+    border: none;  
 }
 
 .search-icon{
@@ -112,8 +117,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
     border:none;
     font-size: 1.2rem; /*using font-size to change size of icon also !!*/
 }
@@ -173,3 +178,122 @@
 .cart-icon{
     font-size:2rem;
 }
+
+.panel{
+    background-color: #1f2626;
+    height: 40px;
+    justify-content:flex-start;
+    align-items: center;
+    display: flex;
+}
+
+.panel-all{
+    display: flex;
+    color: #ffffff;
+    font-size: 14px;
+    height:38px;
+    width:200px;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+}
+
+.style3{
+    font-size: 14px;
+    color: #ffffff;
+}
+
+.heroo{
+    background-image: url("hero_image.jpg");
+    height: 350px;
+    background-size: cover;
+    justify-content: center;  /*for justify:content to work, you need to do display:flex remember!! */
+    display: flex;   
+}
+
+.hero-mssg{
+    background-color: #ffffff;
+    color: #111111;
+    display: flex;
+    height:40px;
+    border-radius: 8px;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    width: 80%;
+    margin-top: 300px;
+}
+
+.hero-mssg a{
+    color: blue;
+    text-decoration: underline;
+}
+
+.content{
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #b5b4e9;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.box{
+    height: 300px;
+    width: 23%;
+    background-image: cover;
+    background-color: white;
+    padding: 20px 8px 15px;
+    margin-top: 20px;
+    border: none;
+}
+
+footer{
+    margin-top: 15px;
+}
+
+.foot-panel1{
+    background-color: #37475a;
+    color: white;
+    height: 50px;
+    display: flex;
+    justify-content: center ;
+    align-items: center;
+    font-size: 1rem;
+}
+
+.foot-panel2{
+    background-color: #293a4e;
+    color: #ffffff;
+    font-size: 14px;
+    height: 300px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+ul{
+    margin-top: 20px;
+}
+
+ul a{
+    display: block;
+    margin-top: 10px;
+    color: #dddddd;
+}
+
+.foot-panel3{
+    background-color: #293a4e;
+    color: #ffffff;
+    border-top: 0.5px solid white;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+}
+
+.flogo{
+    background-image: url("amazon_logo.png");
+    background-size:cover;
+    height: 50px;
+    width:100px;
+}
+
+
